--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Game"
+            android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
@@ -28,6 +29,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
