--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_wordly_launcher"
-        android:roundIcon="@mipmap/ic_wordly_launcher_round"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_wordly_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Wordly"
         tools:targetApi="31">
+        <activity
+            android:name=".InstructionsPage"
+            android:exported="false" />
         <activity
             android:name=".Game"
             android:configChanges="orientation|screenSize"
